add subs, history and search. And add dev data for testing
