# src/main/java/podcastService/search/dto/SearchSort.java
@@ -1,0 +1,8 @@
+package podcastService.search.dto;
+
+public enum SearchSort {
+    RELEVANCE,
+    DATE,
+    RATING,
+    VIEWS
+}
