# src/main/java/podcastService/search/dto/SearchType.java
@@ -1,0 +1,8 @@
+package podcastService.search.dto;
+
+public enum SearchType {
+    ALL,
+    PODCAST,
+    AUTHOR,
+    PLAYLIST
+}
